--- a/AI_CSharp_Assistant/AI_CSharp_Assistant.csproj
+++ b/AI_CSharp_Assistant/AI_CSharp_Assistant.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview7" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-preview7" />
+        <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.0.0-preview7" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview7" />
         <PackageReference Include="ChatGPT.Net" Version="2.0.0" />
         <PackageReference Include="Markdown.Avalonia" Version="11.0.0-b1" />
